<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Curtindo Recife</string>
    <string name="action_settings">Settings</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="title_activity_tela_eventos">Eventos</string>
    <string name="title_section1">Evento 1</string>
    <string name="title_section2">Evento 2</string>
    <string name="title_section3">Evento 3</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_tela_prrincipal">Tela Principal</string>
    <string name="title_activity_tela_agenda">Agenda</string>
    <string name="hello_world">Hello world!</string>
    <string name="titulo">Título</string>
    <string name="mapa">Mapa</string>
    <string name="simbora">Simbora!</string>
    <string name="title_activity_tela_cadastro_evento">Cadastro de Evento</string>
    <string name="nome">Nome</string>
    <string name="CadastroDeEvento">Cadastro de Evento</string>
    <string name="endereco">Endereco</string>
    <string name="descricao">Descricao</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="criar">Criar</string>
    <string name="title_activity_tela_eventos2">TelaEventos2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_legal">Legal</string>
    <string name="semCadastro">Ainda não é cadastrado?</string>
    <string name="entrarFacebook">Entrar com Facebook</string>
    <string name="menu_delete">Manepah</string>
    <string name="title_activity_tela_home">TelaHome</string>
    <string name="title_activity_teste2">Teste2</string>
    <string name="esqueciSenha">Esqueci minha senha</string>
    <string name="title_activity_tela_esqueci_senha">TelaEsqueciSenha</string>
    <string name="informeEmailCadastrado">Por favor informe o email do seu CurtindoRecife</string>
    <string name="recuperarSenha">Recuperar Senha</string>
    <string name="title_activity_tela_cadastro_usuario">TelaCadastroUsuario</string>
    <string name="cadastro">Cadastro</string>
    <string name="dataNascimento">Data de nascimento</string>
    <string name="homem">Homem</string>
    <string name="mulher">Mulher</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="meus_eventos">Meus Eventos</string>
    <string name="btData">Modificar</string>
    <string name="txtData">Data de Nascimento</string>
    <string name="txtTelefone">Telefone</string>
    <string name="txtNumero">Nº</string>
    <string name="txtPreco">Preço</string>
    <string name="title_activity_tela_categoria_evento">TelaCategoriaEvento</string>
    <string name="title_activity_tela_perfil_usuario">TelaPerfilUsuario</string>
    <string name="eventoFavorito">Eventos Favoritos:</string>
    <string name="evento">Evento</string>
    <string name="mudarSenha">Mudar senha</string>
    <string name="mudarEmail">Mudar e-mail</string>
    <string name="senhaAntiga">Senha antiga:</string>
    <string name="novaSenha">Nova senha:</string>
    <string name="confirmarSenha">Confirmar senha:</string>
    <string name="novoEmail">Novo e-mail</string>
    <string name="editar">Editar</string>
    <string name="sair">Sair</string>
    <string name="title_activity_tela_mostrar_perfil">TelaMostrarPerfil</string>
    <string name="title_activity_tela_eventos_data">TelaEventosData</string>
    <string name="title_activity_cadastrar_estabelecimento">CadastrarEstabelecimento</string>
    <string name="CadastroDeEstabelecimento">Cadastro de Local</string>
    <string name="title_activity_tela_meus_estabelecimentos">TelaMeusEstabelecimentos</string>
    <string name="title_activity_tela_facebook">TelaFacebook</string>
<<<<<<< .mine
    <string name="app_id">670005079718273</string>
=======
    <string name="title_activity_tela_eventos_acontecendo">TelaEventosAcontecendo</string>
>>>>>>> .r230

</resources>
