<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaCadastroUsuario" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/cadastro"
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <CheckBox
         android:id="@+id/checkBox2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/checkBox1"
         android:layout_alignBottom="@+id/checkBox1"
         android:layout_alignLeft="@+id/cadastroEmail"
         android:text="@string/mulher" />

     <CheckBox
         android:id="@+id/checkBox1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText1"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="19dp"
         android:layout_toRightOf="@+id/checkBox2"
         android:text="@string/homem" />

     <Button
         android:id="@+id/btnSemCadastro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="42dp"
         android:text="@string/cadastrar" />

     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/checkBox1"
         android:layout_toLeftOf="@+id/textView1"
         android:text="@string/senha"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <EditText
         android:id="@+id/editText1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_alignRight="@+id/cadastroEmail"
         android:layout_centerVertical="true"
         android:ems="10"
         android:inputType="textPassword" />

     <EditText
         android:id="@+id/cadastroEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/editText1"
         android:layout_alignLeft="@+id/textView2"
         android:ems="10"
         android:inputType="textEmailAddress"
         android:text="@string/email" />

     <EditText
         android:id="@+id/cadastroNascimento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/cadastroEmail"
         android:layout_alignLeft="@+id/cadastroEmail"
         android:ems="10"
         android:inputType="date"
         android:text="@string/dataNascimento" />

     <EditText
         android:id="@+id/cadastroNome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/cadastroNascimento"
         android:layout_alignLeft="@+id/cadastroNascimento"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/nome" >

         <requestFocus />
     </EditText>

</RelativeLayout>
