<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curtindo_back_dois"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaCadastroEstabelecimento" >

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtEndereco"
        android:layout_alignRight="@+id/txtHora"
        android:layout_below="@+id/txtTitulo"
        android:layout_marginTop="23dp"
        android:drawableTop="#00000F"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textShortMessage"
        android:textSize="12sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtHora"
        android:layout_below="@+id/txtNome"
        android:ems="10"
        android:hint="@string/endereco"
        android:inputType="textPostalAddress"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/txtNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtEndereco"
        android:layout_below="@+id/txtEndereco"
        android:ems="10"
        android:hint="@string/txtNumero"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/txtHoraInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNumero"
        android:ems="10"
        android:hint="Hora de Início"
        android:inputType="date"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/txtDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/txtHora"
        android:layout_below="@+id/txtTelefone"
        android:ems="10"
        android:hint="@string/descricao"
        android:inputType="textMultiLine"
        android:maxLength="140"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/txtTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCadastroData"
        android:layout_below="@+id/txtHora"
        android:layout_toLeftOf="@+id/txtHora"
        android:ems="10"
        android:hint="@string/txtTelefone"
        android:inputType="phone"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/txtHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtNumero"
        android:layout_marginLeft="24dp"
        android:ems="10"
        android:hint="Hora de Término"
        android:inputType="time"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="Adobe Caslon Pro"
        android:text="@string/CadastroDeEstabelecimento"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FF0000" />

    <Button
        android:id="@+id/btnCriar"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/criarback" />

    <Spinner
        android:id="@+id/spTipoEstabelecimento"
        android:layout_width="167dip"
        android:layout_height="50dip"
        android:layout_above="@+id/btnCriar"
        android:layout_alignLeft="@+id/txtDescricao" />

    <Spinner
        android:id="@+id/spDataFuncionamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spTipoEstabelecimento"
        android:layout_alignLeft="@+id/spTipoEstabelecimento" />

</RelativeLayout>