<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curtindo_back_dois"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaEsqueciSenha" >

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCategoria"
        android:layout_alignRight="@+id/txtCategoria"
        android:layout_below="@+id/txtCategoria"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" >
		
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnEsqueciSenha"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_centerVertical="true"
        android:background="#EE0000"
        android:text="@string/recuperarSenha"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/txtCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/informeEmailCadastrado"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtDataConfirmada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEsqueciSenha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="TextView" />

</RelativeLayout>
