<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curtindo_back_dois"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaPerfilUsuario" >

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <ScrollView
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
      
        <TextView
        android:id="@+id/txtEventoFavorito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="21dp"
        android:text="@string/eventoFavorito" />

    
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

    <Spinner
        android:id="@+id/spCategoriaPerfil1"
        android:layout_width="100dp"
        android:layout_height="50dp" />

    <Spinner
        android:id="@+id/spCategoriaPerfil2"
        android:layout_width="100dp"
        android:layout_height="50dp" />
    
    <Spinner
        android:id="@+id/spCategoriaPerfil3"
        android:layout_width="100dp"
        android:layout_height="50dp"/>

      </LinearLayout>

    <TextView
        android:id="@+id/txtMudarEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/mudarEmail"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
        <TextView
        android:id="@+id/txtNovoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novoEmail"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp" />

<EditText
        android:id="@+id/txtboxEditarEmail"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:ems="10"
        android:inputType="textEmailAddress" />

<TextView
        android:id="@+id/txtSenhaAntiga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senhaAntiga"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp" />

<EditText
        android:id="@+id/txtboxSenhaAntiga"
      android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:ems="10"
        android:inputType="textPassword" />

<TextView
        android:id="@+id/txtNovaSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novaSenha"
        android:textAppearance="?android:attr/textAppearanceSmall" />

<EditText
        android:id="@+id/txtboxNovaSenha1"
       android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:ems="10"
        android:inputType="textPassword" />

<TextView
        android:id="@+id/txtNovaSenha2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmarSenha"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp" />

<EditText
        android:id="@+id/txtboxNovasenha2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

<TextView
        android:id="@+id/txtNovaSenha2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmarSenha"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp" />

<EditText
        android:id="@+id/txtboxNovasenha2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

<TextView
        android:id="@+id/txtData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Data de nascimento: "
        android:textSize="12sp" />

<EditText
        android:id="@+id/edtData"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:ems="10"
        android:inputType="date" />
    
        
</LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
    <RadioButton
        android:id="@+id/rbMulher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mulher" />

    <RadioButton
        android:id="@+id/rbHomem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Homem" />
      </LinearLayout>
      
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
    
    <Button
        android:id="@+id/btnEditar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/editarback"
        android:padding="4dp" />

    <Button
        android:id="@+id/btnExcluir"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/excluirback" />
     </LinearLayout>
    
 </LinearLayout>
 </ScrollView>
  </LinearLayout>


</RelativeLayout>